<resources>
    <string name="app_name">Xcas Pad</string>
    <string name="title_activity_xcas_pad">XcasPadActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="set_help">Set help language</string>
    <string name="action_history">History</string>
    <string name="history_clear">Clear</string>
    <string name="history_empty">No history yet</string>
    <string name="op_error">Computation failed</string>
    <string name="action_save_session">Save session</string>
    <string name="action_clear_session">Clear screen</string>
    <string name="action_loading_session">Loading session…</string>
    <string name="help_section_examples">Examples</string>
    <string name="help_section_related">Related</string>
    <string name="help_section_arguments">Arguments</string>
    <string name="help_title">Xcas Pad Help</string>
    <string name="help_search_hint">Search for function</string>
    <string name="help_definition">Definition</string>
    <string name="row_placeholder_operation">Operation</string>
    <string name="row_placeholder_result">Result</string>
    <string name="row_placeholder_function">function</string>
    <string name="button_ok">OK</string>
    <string name="menu_help">Help</string>
    <string name="menu_zoom_in">Zoom in</string>
    <string name="menu_copy_text">Copy text</string>
    <string name="menu_share_image">Share image</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_simplify">simplify</string>
    <string name="menu_normal">normal</string>
    <string name="menu_factor">factor</string>
    <string name="menu_approx">approx</string>
    <string name="menu_exact">exact</string>
    <string name="menu_eval">eval</string>
    <string name="zoom_hint">Pinch to zoom · drag to pan · double-tap to reset</string>
    <string name="zoom_reset">Reset</string>
    <string name="zoom_copy">Copy text</string>
    <string name="zoom_share">Share</string>
    <string name="zoom_copied">Copied to clipboard</string>
    <string name="zoom_title">Expression</string>
    <string name="op_removed">Operation removed</string>
    <string name="undo">Undo</string>
    <string name="search_hint">Search history…</string>
    <string name="search_no_results">No matches found</string>
    <string name="search_results_found">%d matches found</string>
    <string name="search_results_title">Search results</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="bookmarks_clear">Clear</string>
    <string name="bookmark_add">Bookmark expression</string>
    <string name="bookmark_remove">Remove bookmark</string>
    <string name="bookmark_added">Bookmarked</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="settings_title">Settings</string>
    <string name="settings_history_limit">History size: %1$d entries</string>
    <string name="settings_haptics">Vibration feedback</string>
    <string name="share_image_title">Share output</string>
    <string name="share_image_unavailable">No image to share</string>
    <string name="share_image_failed">Could not share image</string>
    <string name="output_dialog_title">Output</string>
    <string name="output_dialog_use">Use as input</string>
    <string name="output_dialog_copy">Copy</string>
    <string name="output_dialog_dismiss">Close</string>
    <string name="save_session_success">Session saved to Downloads/%1$s</string>
    <string name="save_session_failed">Could not save session</string>
    <string name="action_share_session">Share session</string>
    <string name="share_session_title">Share session</string>
    <string name="share_session_empty">Nothing to share yet</string>
    <string name="share_session_failed">Could not share session</string>
    <string name="action_export_latex">Export as LaTeX</string>
    <string name="export_latex_title">Export LaTeX</string>
    <string name="export_latex_empty">Nothing to export yet</string>
    <string name="export_latex_failed">Could not export LaTeX</string>
    <string name="hint_ime_action_done">Press Enter or Done to evaluate</string>
    <string name="update_available_title">Update available</string>
    <string name="update_available_message">Version %1$s is available. You have %2$s.\n\n%3$s</string>
    <string name="update_download">Download &amp; Install</string>
    <string name="update_later">Later</string>
    <string name="update_downloading">Downloading update…</string>
    <string name="update_check_failed">Could not check for updates</string>
    <string name="action_check_update">Check for updates</string>
    <string name="update_up_to_date">You are up to date</string>
</resources>
