<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="90"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_session"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="Save sesssion" />
    <item
        android:id="@+id/action_share_session"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_share_session" />
    <item
        android:id="@+id/action_export_latex"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_export_latex" />
    <item
        android:id="@+id/action_clear_session"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="Clear screen" />
    <item
        android:id="@+id/action_check_update"
        android:orderInCategory="110"
        app:showAsAction="never"
        android:title="@string/action_check_update" />
</menu>
